overhaul config system
now uses Gson instead of Jankson
supports block tags instead of just ids