@@ -17,38 +17,11 @@ public class InventoryTabsConfig implements ConfigData {
     @ConfigEntry.Gui.Tooltip
     public List<String> excludeTab = Arrays.asList(
             "tiered:reforging_station",
-            "techreborn:basic_machine_casing",
-            "techreborn:advanced_machine_casing",
-            "techreborn:industrial_machine_casing",
-            "techreborn:creative_solar_panel",
-            "techreborn:copper_cable",
-            "techreborn:tin_cable",
-            "techreborn:gold_cable",
-            "techreborn:hv_cable",
-            "techreborn:glassfiber_cable",
-            "techreborn:insulated_copper_cable",
-            "techreborn:insulated_gold_cable",
-            "techreborn:insulated_hv_cable",
-            "techreborn:superconductor_cable",
-            "techreborn:resin_basin",
-            "techreborn:dragon_egg_syphon",
-            "techreborn:lightning_rod",
-            "techreborn:water_mill",
-            "techreborn:wind_mill",
-            "techreborn:drain",
-            "techreborn:lsu_storage",
-            "techreborn:lv_transformer",
-            "techreborn:mv_transformer",
-            "techreborn:hv_transformer",
-            "techreborn:ev_transformer",
-            "techreborn:alarm",
-            "techreborn:lamp_incandescent",
-            "techreborn:lamp_led",
-            "techreborn:computer_cube"
+            "#techreborn:block_entities_without_inventories"
     );
 
     @ConfigEntry.Gui.Tooltip
-    public List<String> includeTab = List.of();
+    public List<String> includeTab = Arrays.asList();
 
     public boolean debugEnabled = false;
 }
